--- a/src/app/book-list/book-list.component.css
+++ b/src/app/book-list/book-list.component.css
@@ -1,5 +1,3 @@
-$breakpoint-alpha: 480px;
-
 .table {
   margin: 1em 0;
   min-width: 300px;
@@ -8,33 +6,51 @@ $breakpoint-alpha: 480px;
 .line {
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
-    background-color: yellow;
+    background-color: #34495E;
 }
 
 .headline {
-    display: none;
+    font-weight: bold;
   }
 
   .cell {
       display: block;
-
-      &:first-child {
-        padding-top: .5em;
-        background-color: green;
-      }
-      &:last-child {
-        padding-bottom: .5em;
-        color: purple;
-      }
-
-      &:before {
-        content: attr(data-th)": ";
-        font-weight: bold;
-        width: 6.5em;
-        display: inline-block;
-
-        @media (min-width: $breakpoint-alpha) {
-          display: none;
-        }
-      }
+  }
+  .cell:first-child {
+      padding-top: .5em;
     }
+    .cell:last-child {
+      padding-bottom: .5em;
+    }
+
+    .headline, .cell {
+        text-align: left;
+        }
+
+
+
+    /*// presentational styling*/
+
+    @import 'https://fonts.googleapis.com/css?family=Montserrat:300,400,700';
+
+    body {
+      padding: 0 2em;
+      font-family: Montserrat, sans-serif;
+      -webkit-font-smoothing: antialiased;
+      text-rendering: optimizeLegibility;
+      color: #444;
+      background: #eee;
+    }
+
+    .table {
+      background: #34495E;
+      color: #fff;
+      border-radius: .4em;
+      overflow: hidden;
+  }
+  .line {
+    border-color: lighten(#34495E, 10%);
+  }
+      .headline, .cell {
+        margin: .5em 1em;
+      }
