--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,17 +1,15 @@
 <div class="table">
   <div class="line">
-    <span class="headline">Id</span>
     <span class="headline">Title</span>
     <span class="headline">Author</span>
     <span class="headline">Action</span>
   </div>
   <div class="line" *ngFor="let book of books">
-    <span data-th="Id">{{book.id}}</span>
-    <span data-th="Title">{{book.title}}</span>
-    <span data-th="Author">{{book.author}}</span>
+    <span class="cell">{{book.title}}</span>
+    <span class="cell">{{book.author}}</span>
     <span>
-      <span (click)="deleteBook(book.id)">remove</span>
-      <span [routerLink]="['/book-edit', book.id]">edit</span>
+      <button (click)="deleteBook(book.id)">Remove</button>
+      <button [routerLink]="['/book-edit', book.id]">Edit</button>
     </span>
   </div>
 </div>
